# erp-microsynth

./: .gitignore  .pylintrc  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
microsynth/: __init__.py  hooks.py  modules.txt  patches.txt
microsynth/config/: desktop.py  docs.py  microsynth.py  qms.py
microsynth/docs/: build_update.sh  customer_import_sample.csv  update.sh
microsynth/fixtures/: custom_field.json
microsynth/microsynth/: batch_invoice_processing.py  bos.py  credits.py  email_handler.py  filters.py  hr.py  invoicing.py  jinja.py  lab_reporting.py  labels.py  marketing.py  migration.py  naming_series.py  payment_reminder.py  portfolio.py  pricing.py  production.py  purchasing.py  queries.py  quotation.py  sales_overview.py  seqblatt.py  shipping.py  slims.py  stock.py  taxes.py  test.py  troubleshooting.py  updater.py  utils.py  webshop.py
microsynth/microsynth/api/: seqblatt.py  stock.py
microsynth/microsynth/custom/: account.json  address.json  batch.json  communication.json  company.json  contact.json  contact_note.json  cost_center.json  country.json  currency.json  customer.json  delivery_note.json  department.json  ebics_statement.json  email_account.json  email_queue.json  email_template.json  employee.json  employee_onboarding.json  employment_type.json  finance_book.json  fiscal_year.json  gl_entry.json  item.json  item_barcode.json  item_default.json  item_group.json  item_price.json  item_supplier.json  (+44 more)
microsynth/public/: build.json
microsynth/qms/: signing.py
microsynth/translations/: de.csv  fr.csv
(+754 files in other folders)
